--- a/source/templates/_layout.pug
+++ b/source/templates/_layout.pug
@@ -6,7 +6,7 @@ html(lang='ru')
 		meta(http-equiv='X-UA-Compatible' content='IE=edge')
 		meta(http-equiv='Content-Type' content='text/html;charset=UTF-8')
 		meta(name='viewport' content='width=device-width, initial-scale=1, user-scalable=no')
-		title Находка 2030
+		title Title
 		link(href=`../css/main.css` type="text/css" rel="stylesheet")
 		link(href=`../css/vendor.css` type="text/css" rel="stylesheet")
 
