--- a/source/layouts/_layout.pug
+++ b/source/layouts/_layout.pug
@@ -7,8 +7,7 @@ html(lang='ru')
 		meta(http-equiv='Content-Type' content='text/html;charset=UTF-8')
 		meta(name='viewport' content='width=device-width, initial-scale=1, user-scalable=no')
 		title Title
-		link(href=`../css/main.css` type="text/css" rel="stylesheet")
-		link(href=`../css/vendor.css` type="text/css" rel="stylesheet")
+		link(href=`/css/main.css` type="text/css" rel="stylesheet")
 
 	body(lang='ru-RU')
 		.fix
@@ -19,5 +18,4 @@ html(lang='ru')
 
 			include components/_component.footer.pug
 
-		script(src=`../scripts/vendor.js` type="text/javascript")
-		script(src=`../scripts/main.js` type="text/javascript")
+		script(src=`/scripts/main.js` type="text/javascript")
